@@ -29,10 +29,12 @@
 #define RCPP_EXPOSED_AS(CLASS)   namespace Rcpp{ namespace traits{ template<> struct r_type_traits< CLASS >{ typedef r_type_module_object_tag r_category ; } ; }}
 #define RCPP_EXPOSED_WRAP(CLASS) namespace Rcpp{ namespace traits{ template<> struct wrap_type_traits< CLASS >{typedef wrap_type_module_object_tag wrap_category ; } ; }}
 
-#define RCPP_EXPOSED_CLASS(CLASS) \
-  class CLASS;                    \
+#define RCPP_EXPOSED_CLASS_NODECL(CLASS) \
   RCPP_EXPOSED_AS(CLASS)          \
   RCPP_EXPOSED_WRAP(CLASS)
 
+#define RCPP_EXPOSED_CLASS(CLASS) \
+  class CLASS;                    \
+  RCPP_EXPOSED_CLASS_NODECL(CLASS)
 
 #endif
